--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- 🔹 배경 비디오 -->
+    <!-- 배경 비디오 -->
     <video autoplay loop muted playsinline id="bgVideo">
       <source src="./video/v01.mp4" type="video/mp4" />
       브라우저가 동영상을 지원하지 않습니다.
     </video>
 
-    <!-- 🔹 비디오 위에 표시할 컨텐츠 -->
-    <div class="content">
-      <h1>확장 프로그램</h1>
-      <p>배경 비디오가 적용되었습니다.</p>
-      <!-- 🔹 날짜와 시간 표시 -->
-      <p id="dateTime">시간 로딩 중...</p>
+    <!-- 날짜 및 시간 표시 -->
+    <div class="clock-box">
+      <div id="clock"></div>
     </div>
 
-    <!-- 🔹 JS 파일 연결 -->
     <script src="js/index.js"></script>
   </body>
 </html>
