--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <!-- 이름 초기화 버튼 -->
     <button id="resetNameButton">이름 초기화</button>
 
+    <!-- 출석판 -->
+    <div id="attendance">
+      <h3>출석 기록</h3>
+      <div id="attendance-grid"></div>
+    </div>
+
     <script src="js/index.js"></script>
   </body>
 </html>
